--- a/digital-audio.html
+++ b/digital-audio.html
@@ -21,7 +21,7 @@
         <li>Quantised in terms of amplitude and time</li>
         <li>Can perfectly recreate any band-limited signal</li>
         <li>Does not loose quality on repeating playback</li>
-        <li>Synthesising a custom signal by code has a lot of pitfalls though</li>
+        <li>Synthesising a custom signal has a lot of pitfalls though</li>
         <li>Most difficult problem is to avoid aliasing</li>
         <li>No frequency above half the sample-rate must be exposed</li>
     </ul>
