--- a/convolver.html
+++ b/convolver.html
@@ -9,6 +9,7 @@
     <script type="module">
         import {Policy} from "./modules/policy.js";
         import {fetchMicrophone, readAudio} from "./modules/standard.js";
+
         const impulses = [
             "files/impulse/spaces/Church.wav",
             "files/impulse/spaces/Deep Space.wav",
@@ -32,6 +33,9 @@
             element.textContent = name;
             return element;
         };
+        const master = context.createGain();
+        master.gain.value = 0.0;
+        master.connect(context.destination);
         fetchMicrophone()
             .then(stream => {
                 const wetSignal = context.createGain();
@@ -40,9 +44,9 @@
                 sourceNode
                     .connect(wetSignal)
                     .connect(convolver)
-                    .connect(context.destination);
+                    .connect(master);
                 sourceNode
-                    .connect(context.destination);
+                    .connect(master);
                 let last = null;
                 const list = document.querySelector("div.impulses");
                 for (let i = 0; i < impulses.length; i++) {
@@ -58,6 +62,11 @@
                     };
                     list.appendChild(button);
                 }
+
+                const enabled = document.querySelector("input#enabled");
+                enabled.addEventListener("change", ignore => {
+                    master.gain.linearRampToValueAtTime(enabled.checked ? 1.0 : 0.0, context.currentTime + 0.050);
+                });
             });
     </script>
 </head>
@@ -68,6 +77,10 @@
 </header>
 <article class="center">
     <div class="impulses"></div>
+    <div style="position: absolute; top: 8px; left: 8px;">
+        <input type="checkbox" id="enabled">
+        <label for="enabled">Enabled</label>
+    </div>
 </article>
 <footer></footer>
 </body>
