--- a/dub-station.html
+++ b/dub-station.html
@@ -16,35 +16,35 @@
         const BPM = 140.0;
         const samples = [
             {
-                url: "files/ghostsyndicate/GS_FREE4_140_DRUMLOOP_03_HAT.wav",
+                url: "files/ghostsyndicate/GS_FREE4_140_DRUMLOOP_03_HAT.ogg",
                 name: "Hihats",
                 duration: 4.0,
                 loop: true,
                 gain: 1.0
             },
             {
-                url: "files/ghostsyndicate/GS_FREE4_140_SYNTH_02_Fm.wav",
+                url: "files/ghostsyndicate/GS_FREE4_140_SYNTH_02_Fm.ogg",
                 name: "Synth",
                 duration: 4.0,
                 loop: true,
                 gain: 0.5
             },
             {
-                url: "files/ghostsyndicate/GS_FREE4_140_BASS_08_Fm.wav",
+                url: "files/ghostsyndicate/GS_FREE4_140_BASS_08_Fm.ogg",
                 name: "Bass",
                 duration: 4.0,
                 loop: true,
                 gain: 1.0
             },
             {
-                url: "files/ghostsyndicate/GS_FREE4_140_DRUMLOOP_03_STP.wav",
+                url: "files/ghostsyndicate/GS_FREE4_140_DRUMLOOP_03_STP.ogg",
                 name: "Kick & Snare",
                 duration: 4.0,
                 loop: true,
                 gain: 1.0
             },
             {
-                url: "files/ghostsyndicate/GS_FREE4_140_DRUMLOOP_03_TOP.wav",
+                url: "files/ghostsyndicate/GS_FREE4_140_DRUMLOOP_03_TOP.ogg",
                 name: "Icing",
                 duration: 4.0,
                 loop: true,
