--- a/euclidean.html
+++ b/euclidean.html
@@ -7,7 +7,7 @@
     <script src="slides.js" type="module"></script>
     <script type="module">
         import {Policy} from "./modules/policy.js";
-        import {Groove, GrooveShuffle, Fragmentation, Sequencer} from "./modules/sequencing.js";
+        import {GrooveShuffle, Fragmentation, Sequencer} from "./modules/sequencing.js";
         import {EuclideanSteps, ParameterField} from "./modules/editors.js";
         import {Euclidean} from "./modules/euclidean.js";
         import {readAudio, replaceElement} from "./modules/standard.js";
